@@ -13,6 +13,10 @@ Additions
 
 Changes
 
+- Service objects now allow static cookie storage, and provide
+  a getter for their fetchHistory in case separate fetcher objects
+  want to reuse the service's cookies and dated data cache.
+
 - Books feed URLs are now generated by a service class method
   
 - Update sample app projects to Xcode 3 format.
